rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x692_2002_Example3-ASN1-Module.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x692_2002_Example3-ASN1-Module.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod example3_asn1_module {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct Sequence1 {
        pub component1: Option<bool>,
        pub component2: Option<Integer>,
        pub component3: Option<VisibleString>,
    }
    impl Sequence1 {
        pub fn new(
            component1: Option<bool>,
            component2: Option<Integer>,
            component3: Option<VisibleString>,
        ) -> Self {
            Self {
                component1,
                component2,
                component3,
            }
        }
    }
}
