rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x692_2002_Example3-EDM.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x692_2002_Example3-EDM.asn1
---
Error matching ASN syntax at while parsing:
   ╭─[line 7, column 2]
   │
   │ 
 4 │  -- Generated by Ecnp, the pretty-printer of France Telecom R&D
 6 │  Example3-EDM {joint-iso-itu-t(2) asn1(1) ecn(4) examples(5) edm-module3(10)}
 7 │  ENCODING-DEFINITIONS ::= ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
   │
───╯
