rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x692_2002_Example3-ELM.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x692_2002_Example3-ELM.asn1
---
Error matching ASN syntax at while parsing:
   ╭─[line 8, column 2]
   │
   │ 
 5 │  -- Generated by Ecnp, the pretty-printer of France Telecom R&D
 7 │  Example3-ELM {joint-iso-itu-t(2) asn1(1) ecn(4) examples(5) elm-module3(8)}
 8 │  LINK-DEFINITIONS ::= ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
   │
───╯
