rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x692_2002_LegacyProtocol-EDM-Module.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x692_2002_LegacyProtocol-EDM-Module.asn1
---
Error matching ASN syntax at while parsing:
   ╭─[line 7, column 21]
   │
   │ 
 6 │  LegacyProtocol-EDM-Module {joint-iso-itu-t(2) asn1(1) ecn(4) examples(5)
 7 │    edm-module4(13)} ENCODING-DEFINITIONS ::= ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
   │
───╯
