rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x692_2008_Example1-ASN1-Module.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x692_2008_Example1-ASN1-Module.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 125, column 29]
     │
     │ 
 125 │  :{a TRUE, b CONTAINING{a 1, b TRUE}} ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
     │
─────╯
